# rml-spirit-firmware

clark_trot_controller/include/clark_trot_controller/: clark_trot_controller.h
clark_trot_controller/src/: clark_trot_controller.cpp
config/: project_params.yaml
ekf_estimator/src/: ekf_estimator.cpp
global_body_planner/: global_body_planner.yaml
global_body_planner/include/global_body_planner/: global_body_planner.h  planning_utils.h
global_body_planner/src/: global_body_planner.cpp  planner_class.cpp  planning_utils.cpp  rrt_connect.cpp
grid_map_pcl/config/: parameters.yaml
grid_map_pcl/launch/: grid_map_pcl_loader_node.launch
grid_map_pcl/src/: GridMapPclConverter.cpp
local_footstep_planner/src/: local_footstep_planner.cpp
mblink_converter/src/: mblink_converter.cpp
spirit_logger/scripts/: processLog.m
spirit_msgs/: CMakeLists.txt
spirit_msgs/msg/: MotorCommand.msg  PlanStats.msg  TorqueCommand.msg
spirit_simulator/gazebo_scripts/: CMakeLists.txt  package.xml
spirit_utils/: CMakeLists.txt  package.xml
spirit_utils/config/: terrain_map_publisher.yaml  trajectory_publisher.yaml
spirit_utils/data/: terrain.stl
spirit_utils/data/test/: nx_data.csv  (+9 more)
spirit_utils/launch/: estimation.launch  mocap.launch  spirit.launch  spirit_gazebo.launch  unify_gnd_map.launch
spirit_utils/rviz/: config.rviz
spirit_utils/src/: fast_terrain_map.cpp  map_search_lib.cpp  terrain_quality_processing.cpp  terrain_quality_processing_node.cpp  trajectory_publisher.cpp  unify_gnd_map.cpp  unify_gnd_map_node.cpp
spirit_utils/test/: test_fast_terrain_map.cpp
(+17 files in other folders)
